welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: not found: value GetMondeHauteur
    setPos(i, i + GetMondeHauteur() - 1 - diag)
                  ^Diagonal:18: error: not found: value ecrireMessage
    ecrireMessage(""+(compt+comptLocal))
    ^